# IMEC

./: .gitignore  LICENSE  ReadMe.md  main.py  pyproject.toml  requirements_dev.txt
calculations/: calculator.py
interface/: console_io.py
utils/: converter.py  utils.py
