[tool.poetry]
name = "phys_calc"
version = "0.1.0"
description = ""
authors = ["gregbi"]

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.8"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
pylint = "^2.11.1"
ipython = "^7.27.0"
pyinstaller = "^4.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
